<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DemoApp</string>
    <string name="basic_controls_button_text">Basic Controls</string>
    <string name="shared_preferences_button_text">Shared Preferences</string>
    <string name="action_bar_button_text">Action Bar</string>
    <string name="audio_button_text">Audio</string>
    <string name="demo_app">DEMO\nAPP</string>
    <string name="title_activity_basic_controls">BasicControlsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_text">This is hint text!</string>
    <string name="label_toggle_text">Some text for toggle button</string>

    <string-array name="spinner_values">
        <item>Homer</item>
        <item>Marge</item>
        <item>Lisa</item>
        <item>Bart</item>
        <item>Maggie</item>
    </string-array>

    <string name="title_activity_shared_preferences">SharedPreferencesActivity</string>
    <string name="shared_pref_demo">This demos the shared prefereces!</string>
    <string name="load_preferences">Load Preferences</string>
    <string name="save_preferences">Save Preferences</string>
    <string name="default_saved_string">Default saved string</string>
    <string name="preferences_key">azzam.imad.demo.mypreferences</string>
    <string name="saved_hint_text">"Enter text to be saved and loaded into textview above."</string>
    <!--  -->
    <string name="title_activity_action_bar">ActionBarActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="show_action_bar_button_text">Show Action Bar</string>
    <string name="hide_action_bar_button_text">Hide Action Bar</string>
    <string name="search_hint">Search terms here</string>
    <string name="go">Go</string>
    <!--  -->
    <string name="title_activity_audio">AudioActivity</string>
    <string name="play_sound">Play Sound</string>
    <string name="cd_play">This is the play image button</string>
    <string name="cd_stop">This is the stop image button</string>
    <!--  -->
    <string name="title_activity_grid_view">GridViewActivity</string>
    <string name="gridview_button_text">Grid View</string>
    <!--  -->
    <string name="title_activity_animation">AnimationActivity</string>
    <string name="animation_button_text">Animation</string>
    <string name="cd_santa">Santa!!</string>
    <string name="animate_down">Down</string>
    <string name="animate_up">Up</string>
    <string name="animate_left">Left</string>
    <string name="animate_right">Right</string>
    <string name="animate_magic">!</string>
    <!--  -->
    <string name="title_activity_in_app_billing">InAppBillingActivity</string>
    <string name="inappbilling_button_text">In-App Billing</string>
    <string name="start_setup">Start Setup</string>
    <string name="query_inventory">Query Inventory</string>
    <string name="purchase">Purchase</string>
    <string name="consume">Consume</string>
</resources>
