<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AnimationActivity"
    android:orientation="vertical">
    
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animate_down"
            android:onClick="doAnimationDown"/>
        
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animate_up"
            android:onClick="doAnimationUp"/>
        
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animate_left"
            android:onClick="doAnimationLeft"/>
        
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animate_right"
            android:onClick="doAnimationRight"/>
        
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animate_magic"
            android:onClick="doAnimationMagic"/>
    </LinearLayout>
    
    <ImageView android:id="@+id/santa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/santa"
        android:contentDescription="@string/cd_santa"/>
    

    
</LinearLayout>
