<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".MainActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/demo_app"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"/>

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            tools:ignore="UselessParent"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/basic_controls"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/basic_controls_button_text"
                android:onClick="showBasicControls"/>
            
            <Button
                android:id="@+id/shared_preferences_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/shared_preferences_button_text"
                android:onClick="showSharedPreferences"/>
            
            <Button
                android:id="@+id/action_bar_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/action_bar_button_text"
                android:onClick="showActionBar"/>
            
            <Button
                android:id="@+id/audio_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/audio_button_text"
                android:onClick="showAudio"/>
            
            <Button
                android:id="@+id/gridview_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/gridview_button_text"
                android:onClick="showGridView"/>
            
            <Button
                android:id="@+id/animation_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/animation_button_text"
                android:onClick="showAnimation"/>
            
            <Button
                android:id="@+id/inappbilling_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/inappbilling_button_text"
                android:onClick="showInAppBilling"/>
            
        </LinearLayout>
    </FrameLayout>

</FrameLayout>
