<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SharedPreferencesActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shared_pref_demo"
        android:layout_marginBottom="@dimen/control_vertical_margin"/>
    
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_preferences"
        android:onClick="loadPreferences"
        android:layout_marginBottom="@dimen/control_vertical_margin"/>
    
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_preferences"
        android:onClick="savePreferences"
        android:layout_marginBottom="@dimen/control_vertical_margin"/>
    
    <TextView android:id="@+id/saved_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_saved_string"/>
    
    <EditText android:id="@+id/edittext_to_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/saved_hint_text"
        android:layout_marginBottom="@dimen/control_vertical_margin"/>
    
    <ToggleButton android:id="@+id/saved_togglebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/control_vertical_margin"/>

    <RatingBar
        android:id="@+id/saved_ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0.0" />
    
</LinearLayout>
