<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActionBarActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_action_bar_button_text"
        android:layout_marginBottom="@dimen/control_vertical_margin"
        android:layout_gravity="center"
        android:onClick="showTheActionBar"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hide_action_bar_button_text"
        android:layout_marginBottom="@dimen/control_vertical_margin"
        android:layout_gravity="center"
        android:onClick="hideTheActionBar"/>
    
    <LinearLayout android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">
        
        <EditText android:id="@+id/search_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:hint="@string/search_hint"
            />
        
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:onClick="performSearch"/>
    
    </LinearLayout>
</LinearLayout>
