<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InAppBillingActivity"
    android:orientation="vertical">

    <TextView android:id="@+id/feedback_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button android:id="@+id/start_setup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_setup"
        android:onClick="startSetup"/>
    
    <Button android:id="@+id/query_inventory_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_inventory"
        android:onClick="queryInventory"
        android:visibility="gone"/>
</LinearLayout>
