<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AudioActivity"
    android:orientation="vertical">

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="playSound"
        android:text="@string/play_sound"
        android:layout_marginBottom="@dimen/control_vertical_margin" />
    
    <TextView android:id="@+id/sound_played_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/control_vertical_margin" />
    
    <ImageButton android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="playMusic"
        android:src="@drawable/ic_play"
        android:contentDescription="@string/cd_play"
        />
    
    <ImageButton android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="stopMusic"
        android:src="@drawable/ic_stop"
        android:contentDescription="@string/cd_stop"/>
    
    <ToggleButton android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toggleLooping"/>
</LinearLayout>
